--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,6 +13,7 @@
     "paths": {
       "buttons": ["libs/elements/layout/buttons/src/index.ts"],
       "home": ["libs/features/pages/src/index.ts"],
+      "image": ["libs/models/schema/ui/images/src/index.ts"],
       "images": ["libs/elements/layout/images/src/index.ts"]
     }
   }
