--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
       "carousel": ["libs/elements/layout/carousel/src/index.ts"],
       "home": ["libs/features/pages/src/index.ts"],
       "image": ["libs/models/schema/ui/images/src/index.ts"],
-      "images": ["libs/elements/layout/images/src/index.ts"]
+      "images": ["libs/elements/layout/images/src/index.ts"],
+      "text": ["libs/elements/layout/texts/src/index.ts"]
     }
   }
 }
